--- a/index.html
+++ b/index.html
@@ -37,21 +37,35 @@
             >
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#fibonacci" role="button"> Fibonacci </a>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarNumericos"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Cálculos numéricos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarNumericos">
+              <li><a class="dropdown-item" href="#fibonacci">Fibonacci</a></li>
+              <li><a class="dropdown-item" href="#ordenar">Ordenador</a></li>
+              <li><a class="dropdown-item" href="#factorial">Factorial</a></li>
+              <li>
+                <a class="dropdown-item" href="#operaciones">Operaciones</a>
+              </li>
+            </ul>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#ordenar" role="button"> Ordenador </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#factorial" role="button"> Factorial </a>
+            <a class="nav-link" href="/imagenes.html" role="button">
+              Cambiar imágenes
+            </a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="#cambiarimg" role="button">
-              Cambiar imágenes
+              Calculadora
             </a>
           </li>
         </ul>
@@ -207,6 +221,6 @@ function factorial(n) {
     <a href="index.html" id="boton-inicio">↑ Ir al Inicio</a>
 
     <script src="js/ejercicios.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
