--- a/imagenes.html
+++ b/imagenes.html
@@ -56,11 +56,7 @@
               <li>
                 <a class="dropdown-item" href="index.html#ordenar">Ordenador</a>
               </li>
-              <li>
-                <a class="dropdown-item" href="index.html#factorial"
-                  >Factorial</a
-                >
-              </li>
+              <li><a class="dropdown-item" href="#factorial">Factorial</a></li>
               <li>
                 <a class="dropdown-item" href="index.html#operaciones"
                   >Operaciones</a
@@ -70,7 +66,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#cambiarimg" role="button">
+            <a class="nav-link" href="/imagenes.html" role="button">
               Cambiar imágenes
             </a>
           </li>
