--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
     <section id="fibonacci">
       <div class="container py-5 rounded-3">
         <h2>Calculadora Fibonacci</h2>
+        <p>
+          Escribe un número para calcular el valor de su posición en la serie
+          Fibonacci
+        </p>
         <br />
 
         <div class="d-flex align-items-center gap-2 res">
@@ -125,9 +129,7 @@ function calcularFibonacci() {
     <section id="ordenar">
       <div class="container py-5 rounded-3">
         <h2>Ordenador de números</h2>
-        <p class="pblanco">
-          Escribe 3 números y se ordenarán automáticamente de mayor a menor
-        </p>
+        <p>Escribe 3 números y se ordenarán automáticamente de mayor a menor</p>
 
         <div class="row justify-content-center g-3 text-center px-4">
           <div class="col-6 col-md-4 col-lg-3">
@@ -183,7 +185,7 @@ function calcularFibonacci() {
     <section id="factorial">
       <div class="container py-5 rounded-3">
         <h2>Calculador de Factorial</h2>
-        <p class="pblanco">Escribe un número para calcular su factorial</p>
+        <p>Escribe un número para calcular su factorial</p>
         <div class="d-flex align-items-center gap-2 res">
           <input type="number" id="numerof" class="form-control" />
           <button onclick="calcularFactorial()" class="btn btn-warning">
