--- a/imagenes.html
+++ b/imagenes.html
@@ -62,6 +62,11 @@
                   >Operaciones</a
                 >
               </li>
+              <li>
+                <a class="dropdown-item" href="index.html#elmayor"
+                  >Encontrar el mayor</a
+                >
+              </li>
             </ul>
           </li>
 
@@ -107,7 +112,37 @@
     </section>
 
     <a href="imagenes.html" id="boton-inicio">↑ Ir arriba</a>
+    <footer class="footer bg-dark text-white py-4">
+      <div
+        class="container bg-dark d-flex flex-column flex-md-row align-items-center justify-content-between">
+        <div class="footer-logo mb-3 mb-md-0">
+          <img src="img/jslogo.png" alt="Logo" class="logo-footer" />
+        </div>
 
+        <ul
+          class="footer-menu list-unstyled d-flex flex-column flex-md-row gap-3 mb-3 mb-md-0">
+          <li>
+            <a href="index.html" class="text-white text-decoration-none"
+              >Cálculos Matemáticos</a
+            >
+          </li>
+          <li>
+            <a href="imagenes.html" class="text-white text-decoration-none"
+              >Cambiar imagen</a
+            >
+          </li>
+          <li>
+            <a href="calc.html" class="text-white text-decoration-none"
+              >Calculadora</a
+            >
+          </li>
+        </ul>
+
+        <p class="mb-0 text-center text-md-end">
+          Hecho por <span class="foot"> Silvia Jerez </span>
+        </p>
+      </div>
+    </footer>
     <script src="js/cambiarimg.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   </body>
