--- a/imagenes.html
+++ b/imagenes.html
@@ -88,6 +88,8 @@
     <div class="p-5">
       <h1>Misión 2 - Javascript</h1>
       <p class="nombre">Silvia Fernanda Jerez Acuña</p>
+      <br />
+      <h4 id="reloj">hola</h4>
     </div>
 
     <section id="imgs">
