--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     <div class="p-5">
       <h1>Misión 2 - Javascript</h1>
       <p class="nombre">Silvia Fernanda Jerez Acuña</p>
+      <br />
+      <h4 id="reloj">hola</h4>
     </div>
 
     <section id="fibonacci">
@@ -246,7 +248,7 @@ function factorial(n) {
           </button>
         </div>
 
-        <div class="mt-3 text-start py-4 m-0">
+        <div class="text-start py-4 m-0">
           <p class="titp">Suma: <span id="suma"></span></p>
           <p class="titp">Resta: <span id="resta"></span></p>
           <p class="titp">Multiplicación: <span id="multiplicacion"></span></p>
@@ -290,8 +292,8 @@ function calcularOperaciones() {
 
     <section id="elmayor">
       <div class="container py-5 rounded-3">
-        <h2>Ordenador de números</h2>
-        <p>Escribe 3 números y se ordenarán automáticamente de mayor a menor</p>
+        <h2>Encontrar el mayor</h2>
+        <p>Escribe 3 números para determinar cuál es el mayor</p>
 
         <div class="row justify-content-center g-3 text-center px-4">
           <div class="col-6 col-md-4 col-lg-3">
