--- a/imagenes.html
+++ b/imagenes.html
@@ -89,7 +89,7 @@
       <h1>Misión 2 - Javascript</h1>
       <p class="nombre">Silvia Fernanda Jerez Acuña</p>
       <br />
-      <h4 id="reloj">hola</h4>
+      <h4 id="reloj"></h4>
     </div>
 
     <section id="imgs">
