--- a/imagenes.html
+++ b/imagenes.html
@@ -146,6 +146,7 @@
       </div>
     </footer>
     <script src="js/cambiarimg.js"></script>
+    <script src="js/ejercicios.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
