--- a/index.html
+++ b/index.html
@@ -226,6 +226,51 @@ function factorial(n) {
       </div>
     </section>
 
+    <section id="suma">
+      <div class="container py-5 rounded-3">
+        <h2>Suma</h2>
+        <p>Escribe 2 números para sumarlos</p>
+
+        <div class="row justify-content-center g-3 text-center px-4">
+          <div class="col-6 col-md-4 col-lg-3">
+            <label for="nume1">Número 1:</label>
+            <input type="number" id="numero1s" class="form-control" />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <label for="nume2">Número 2:</label>
+            <input type="number" id="numero2s" class="form-control" />
+          </div>
+        </div>
+
+        <div class="mt-3">
+          <button class="btn btn-warning mb-2" onclick="sumarNumeros ()">
+            Sumar
+          </button>
+        </div>
+
+        <p class="res py-4 m-0">Resultado: <span id="resultadoSuma"></span></p>
+
+        <pre class="rounded px-4">
+          <h6>Código utilizado:</h6>
+          <code>
+function sumarNumeros() {
+  let nume1 = parseFloat(document.getEleme("numero1s").value);
+  let nume2 = parseFloat(document.getEleme("numero2s").value);
+            
+  if (isNaN(nume1) || isNaN(nume2)) {
+    document.getElementById("resultadoStextContent =
+      "Ingresa números válidos.";
+    return;
+  }
+            
+  let suma = nume1 + nume2;
+  document.getElementById("resultadoSuma").textCo= suma;
+}       
+          </code>
+        </pre>
+      </div>
+    </section>
+
     <section id="operaciones">
       <div class="container py-4 rounded-3">
         <h2>Operaciones Básicas</h2>
