footer arreglado y tap en movil

--- a/calculadora.html
+++ b/calculadora.html
@@ -56,16 +56,45 @@
               <li>
                 <a class="dropdown-item" href="index.html#ordenar">Ordenador</a>
               </li>
-              <li><a class="dropdown-item" href="#factorial">Factorial</a></li>
+              <li>
+                <a class="dropdown-item" href="index.html#factorial"
+                  >Factorial</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="index.html#suma">Suma</a>
+              </li>
+
               <li>
                 <a class="dropdown-item" href="index.html#operaciones"
                   >Operaciones</a
                 >
               </li>
+
               <li>
                 <a class="dropdown-item" href="index.html#elmayor"
                   >Encontrar el mayor</a
                 >
+              </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#multiplo35"
+                  >Múltiplos de 3 y 5</a
+                >
+              </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#divisores"
+                  >Divisores</a
+                >
+              </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#primos">Primos</a>
+              </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#promedio">Promedio</a>
               </li>
             </ul>
           </li>
@@ -96,8 +125,7 @@
       <div class="container py-5">
         <h2 class="text-center">Calculadora Tradicional</h2>
         <p class="text-center">
-          Escribe un número para calcular el valor de su posición en la serie
-          Fibonacci.
+          Realiza operaciones básicas en esta calculadora virtual
         </p>
 
         <!-- Contenedor para centrar -->
@@ -106,7 +134,7 @@
             <div id="pantalla" class="pantalla my-3">0</div>
 
             <div class="d-grid gap-2">
-              <div class="row">
+              <div class="row px-2">
                 <button
                   class="btn btn-calculadora lac rosa"
                   onclick="limpiar()">
@@ -123,7 +151,7 @@
                   ⌫
                 </button>
               </div>
-              <div class="row">
+              <div class="row px-2">
                 <button
                   class="btn btn-light btn-calculadora"
                   onclick="ingresarNumero(7)">
@@ -145,7 +173,7 @@
                   ÷
                 </button>
               </div>
-              <div class="row">
+              <div class="row px-2">
                 <button
                   class="btn btn-light btn-calculadora"
                   onclick="ingresarNumero(4)">
@@ -167,7 +195,7 @@
                   ×
                 </button>
               </div>
-              <div class="row">
+              <div class="row px-2">
                 <button
                   class="btn btn-light btn-calculadora"
                   onclick="ingresarNumero(1)">
@@ -189,7 +217,7 @@
                   −
                 </button>
               </div>
-              <div class="row">
+              <div class="row px-2">
                 <button
                   class="btn btn-light btn-calculadora"
                   onclick="ingresarNumero(0)">
@@ -206,7 +234,7 @@
                   +
                 </button>
               </div>
-              <div class="row">
+              <div class="row px-2">
                 <button
                   class="btn btn-primary btn-igual"
                   onclick="calcularResultado()">
