--- a/imagenes.html
+++ b/imagenes.html
@@ -56,22 +56,51 @@
               <li>
                 <a class="dropdown-item" href="index.html#ordenar">Ordenador</a>
               </li>
-              <li><a class="dropdown-item" href="#factorial">Factorial</a></li>
+              <li>
+                <a class="dropdown-item" href="index.html#factorial"
+                  >Factorial</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="index.html#suma">Suma</a>
+              </li>
+
               <li>
                 <a class="dropdown-item" href="index.html#operaciones"
                   >Operaciones</a
                 >
               </li>
+
               <li>
                 <a class="dropdown-item" href="index.html#elmayor"
                   >Encontrar el mayor</a
                 >
               </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#multiplo35"
+                  >Múltiplos de 3 y 5</a
+                >
+              </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#divisores"
+                  >Divisores</a
+                >
+              </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#primos">Primos</a>
+              </li>
+
+              <li>
+                <a class="dropdown-item" href="index.html#promedio">Promedio</a>
+              </li>
             </ul>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/imagenes.html" role="button">
+            <a class="nav-link" href="imagenes.html" role="button">
               Cambiar imágenes
             </a>
           </li>
