--- a/calculadora.html
+++ b/calculadora.html
@@ -267,7 +267,7 @@
             >
           </li>
           <li>
-            <a href="calc.html" class="text-white text-decoration-none"
+            <a href="calculadora.html" class="text-white text-decoration-none"
               >Calculadora</a
             >
           </li>
