--- a/imagenes.html
+++ b/imagenes.html
@@ -183,7 +183,7 @@
             >
           </li>
           <li>
-            <a href="calc.html" class="text-white text-decoration-none"
+            <a href="calculadora.html" class="text-white text-decoration-none"
               >Calculadora</a
             >
           </li>
